# PCS4_project

./: CMakeLists.txt  README.md
include/: AlgorithmRunner.h  Graph.h  GraphLayout.h  GraphScene.h  GraphWidget.h  MainWindow.h
src/: AlgorithmRunner.cpp  Graph.cpp  GraphLayout.cpp  GraphScene.cpp  GraphWidget.cpp  MainWindow.cpp  main.cpp
tests/: CMakeLists.txt  unit_tests.cpp
tests/scenarios/: scenario_bfs.cpp  scenario_complete_workflow.cpp  scenario_dfs.cpp  scenario_graph_io.cpp  scenario_layout.cpp
tests/unit_tests/: test_algorithm_runner.cpp  test_graph.cpp  test_graph_layout.cpp  test_graph_scene.cpp
